# Bobby-GenAi-Squad

./: .dockerignore  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RESULTS.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  release-drafter.yml
bobby_squad/: __init__.py  agent_tools.py  blackboard.py  board_tools.py  burn_in.py  core.py  correction_memory.py  dedup.py  dedup_ast.py  encoders.py  engine.py  fsm.py  harness.py  jobs.py  learned_retriever.py  ledger.py  llm.py  metacognition.py  observability.py  ops_world.py  planning.py  primitive_intel.py  primitive_lib.py  proving.py  retrieval.py  room.py  router.py  search_agent.py  sheaf_consensus.py  society.py  soma_flywheel.py  squad.py  surrogate.py  swe_bench.py  synthbench.py  telemetry.py  vault.py  world_layer.py  worldsense.py
docker/: worker.Dockerfile
docs/: BENCHMARK.md  DESIGN.md  EXTENSIONS.md  PRIMITIVES.md  _config.yml  architecture.md  engine.md  index.md  interface.md  whats-new.md
examples/: demo_no_infra.py  quickstart.py
examples/soma_flywheel/: README.md  emit_corpus.py  eval_stats.py  merge_adapter.py  requirements.txt  train_lora.py
knowledge/vaults/foundation/: clone-capability.md  gemma-foundation-native.md  jacobian-lens.md  long-horizon-improvement.md  loops-system.md  memory-selection.md  perf-memory.md  persona-reuse.md  split-parallelism.md  thinking-behavior.md  tokenization.md  tools-detection.md  (+2 more)
studio/: docker-compose.yml
studio/backend/: Dockerfile  app.py  blocks.py  dgx_monitor.py  requirements.txt  runner.py  specs.py  store.py
studio/frontend/: Dockerfile  next.config.js  package.json  pnpm-lock.yaml
wiki/: README.md  scale_e2e_stats.json
wiki/proofs/: benchmark_agents.py  benchmark_book.py  benchmark_engine.py  benchmark_framework.py  benchmark_multihop.py  benchmark_reuse.py  benchmark_trio.py  compare_memory.py  confirm_coordination.py  confirm_organization.py  cross_domain.py  cross_sector_knowledge.py  customer_service_world.py  engine_trace.py  experiential_learning.py  goal_focus_horizon.py  goal_unbreakable.py  memory_gains.py  memory_policy_gain.py  organization_recursive.py  probe_generation.py  proposals_gain.py  run_burn_in_live.py  run_burn_in_mixed_live.py  run_burn_in_sweep.py  run_code_bench_agent.py  run_code_bench_hf.py  self_development.py  self_improve_connectivity.py  self_improve_engine.py  self_review.py  squad_reads_code.py  squad_reads_pdfs.py  test_algo_distill.py  test_algo_distill_live.py  test_all_layers.py  test_burn_in.py  test_engine_live.py  test_flywheel_engine_live.py  test_fsm_live.py  (+10 more)
wiki/samples/: KNOWLEDGE_MAP_25_oss_repos.md  arxiv_squad_output.txt  cross_sector_output.txt  customer_service_output.txt  engine_trace.json  goal_focus_output.txt  goal_unbreakable_output.txt  long_horizon_flatness.txt  squad_reads_code_output.txt  transfer_knowledge_output.txt
(+63 files in other folders)
