[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bobby-genai-squad"
version = "0.1.0"
description = "Teams of AI agents that organize themselves: split the work, read huge tasks end-to-end without forgetting, prove what actually works (and drop what doesn't), and learn/train from it — no orchestrator, no scripted roles."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Moun1r1" }]
keywords = ["llm", "agents", "multi-agent", "self-organizing", "persistent-self", "generative-agents"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []   # pure stdlib. An OpenAI-compatible /v1/chat/completions endpoint is all you need at runtime.

[project.optional-dependencies]
embeddings = []     # any OpenAI-/Ollama-compatible embedding endpoint (set BOBBY_EMBED_URL); no python deps required.
papers = ["pypdf"]  # only the arXiv-reading proof (wiki/proofs/squad_reads_pdfs.py) needs a PDF text extractor.
training = ["torch", "numpy"]   # the encoder bank + world-transformer layer (GPU training on the worker); the learned
                                # retriever (LearnedRetriever) needs numpy. The core engine + vault work without either.
# The Studio control room (studio/) is a separate app — its deps live in studio/backend/requirements.txt and
# studio/frontend/package.json, deployed via studio/docker-compose.yml.

[project.urls]
Homepage = "https://github.com/Moun1r1/Bobby-GenAi-Squad"
Source = "https://github.com/Moun1r1/Bobby-GenAi-Squad"

[tool.setuptools]
packages = ["bobby_squad"]
